--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,8 @@ branches:
 language: node_js
 
 node_js:
-  - "4"
-  - "5"
-
-before_script:
-  - "npm install -g grunt-cli"
-  - "npm install"
+  - "6"
+  - "node"
 
 script:
   - "npm run test"
@@ -18,4 +14,3 @@ script:
 notifications:
   email:
     - ram@hiddentao.com
-
