--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,9 @@
   "rules": {
     "generator-star-spacing": ["error", {"before": true, "after": false}],
     "yoda": 0,
-    "brace-style": 0
+    "brace-style": 0,
+    "no-multiple-empty-lines": 0,
+    "one-var": 0
   },
   "globals": {
   }
