--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "coffee-script": "^1.12.4",
     "eslint": "^3.18.0",
     "eslint-config-standard": "^7.1.0",
+    "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.1.1",
     "gulp": "^3.9.1",
     "gulp-mocha": "^4.1.0",
