work towards tests

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
     "yoda": 0,
     "brace-style": 0,
     "no-multiple-empty-lines": 0,
-    "one-var": 0
+    "one-var": 0,
+    "comma-dangle": 0
   },
   "globals": {
   }
