--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
   "devDependencies": {
     "chai": "~1.9.1",
     "co": "~3.0.5",
+    "co-mocha": "^1.2.0",
     "coffee-script": "^1.12.4",
     "eslint": "^3.18.0",
     "eslint-config-standard": "^7.1.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.1.1",
+    "genomatic": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-mocha": "^4.1.0",
     "shelljs": "~0.2.6",
